--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = ['flask_variable_manager*']
 
 [project]
 name = "flask-variable-manager"
-version = "0.0.1"
+version = "0.1.0"
 description = "Create a variable manager in flask, enter values in python, and use values on the jinja template."
 authors = [
     { name = "minwook-shin", email = "minwook0106@gmail.com" },
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "FRAMEWORK :: FLASK"
 ]
 dependencies = [
     "flask==2.3.3",
