--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "FRAMEWORK :: FLASK"
+    "Framework :: Flask"
 ]
 dependencies = [
     "flask==2.3.3",
